--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -3,5 +3,6 @@ FROM microsoft/aspnetcore-build
 WORKDIR /app
 COPY . .
 RUN dotnet restore
+EXPOSE 80
 # RUN dotnet run
 ENTRYPOINT ["dotnet", "run"]
